--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    width: 98%;
+    height: 98%;
+    
+}
+body {
+    margin: 1px;
+}
