--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,8 +20,10 @@
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
-    background-color: white;
-    background-image: url('../assets/img/searchicon.png');
+    color:#c8c8c8;
+    background-color: #272b30;
+    background-image: url('../assets/img/mag_glass_icon_white.png');
+    background-size: 26px;
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
@@ -89,6 +91,7 @@ and (max-device-width : 1280px) {
     height: 30px;
     width: 30px;
     text-indent: -99999px;
+    filter: invert(100%);
 }
 
 .back-button {
