Prevent form submit behaviour when clicking
refer:
http://stackoverflow.com/questions/38120756/angular2-router-navigate-refresh-page

--- a/src/app/movie.detail.component.html
+++ b/src/app/movie.detail.component.html
@@ -1,7 +1,7 @@
 <div id="movie-detail">
     <div class="movie-detail-wrapper">
         <div id="movie-detail-title">
-            <a href="" (click)="backToList()" class="back-button movie-detail-nav">Back</a>
+            <a href="" (click)="backToList(); false" class="back-button movie-detail-nav">Back</a>
             <h2 class="movie-detail-title">{{movieDetail.title}}</h2>
             <br style="clear: both;" />
         </div>
