--- a/src/app/components/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie-detail/movie-detail.component.html
@@ -38,7 +38,7 @@
 
                         <div class="row">
                             <div class="col-xs-6">TV Recording?</div>
-                            <div class="col-xs-6">{{movieDetail.tvRecording}}</div>
+                            <div class="col-xs-6">{{movieDetail.tvRecording ? 'Yes' : 'No'}}</div>
                         </div>
 
                         <div class="row">
