Set Search box to be autofocus

--- a/src/app/components/movie-list/movie-list.component.html
+++ b/src/app/components/movie-list/movie-list.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="search-area row">
   <div class="col-lg-3" >
-    <input name="search" type="search" [formControl]="term" placeholder="Search.." class="search-box"/>
+    <input name="search" type="search" [formControl]="term" placeholder="Search.." class="search-box" autofocus="true" />
   </div>
   <div class="category-selection-area col-lg-2">
     <div class="drop-down">
