Stop bouncing search results

--- a/src/app/components/movie-list/movie-list.component.css
+++ b/src/app/components/movie-list/movie-list.component.css
@@ -137,7 +137,7 @@ and (max-device-width : 1280px) {
 
 .loading-indicator {
     padding: 1px;
-    margin: 1px;
+    margin-top: -30px;
 }
 
 .loading-indicator-text {
